[build] feature consistency between build types
upate config.h.cmake for missing defines
minor adjustments to other builds for features consistency

--- a/src/meson.build
+++ b/src/meson.build
@@ -54,8 +54,8 @@ conf_data.set('HAVE_MALLOC_H', compiler.has_header('malloc.h'))
 conf_data.set('HAVE_POLL_H', compiler.has_header('poll.h'))
 conf_data.set('HAVE_PORT_H', compiler.has_header('port.h'))
 conf_data.set('HAVE_PWD_H', compiler.has_header('pwd.h'))
-conf_data.set('HAVE_STDDEF_H', compiler.has_header('stddef.h'))
 conf_data.set('HAVE_STDINT_H', compiler.has_header('stdint.h'))
+conf_data.set('HAVE_STDLIB_H', compiler.has_header('stdlib.h'))
 conf_data.set('HAVE_STRINGS_H', compiler.has_header('strings.h'))
 conf_data.set('HAVE_SYSLOG_H', compiler.has_header('syslog.h'))
 
@@ -81,11 +81,6 @@ if conf_data.get('HAVE_CRYPT_H')
 		libcrypt = [ compiler.find_library('crypt') ]
 		conf_data.set('HAVE_CRYPT', 1)
 	endif
-endif
-
-conf_data.set('HAVE_SYS_INOTIFY_H', compiler.has_header('sys/inotify.h'))
-if conf_data.get('HAVE_SYS_INOTIFY_H')
-	conf_data.set('HAVE_INOTIFY_INIT', compiler.has_function('inotify_init', args: defs))
 endif
 
 conf_data.set('HAVE_SOCKLEN_T', compiler.has_type('socklen_t', args: defs, prefix: '#include <sys/socket.h>'))
@@ -121,7 +116,7 @@ conf_data.set('HAVE_GETRLIMIT', compiler.has_function('getrlimit', args: defs))
 conf_data.set('HAVE_GETUID', compiler.has_function('getuid', args: defs))
 conf_data.set('HAVE_GMTIME_R', compiler.has_function('gmtime_r', args: defs))
 conf_data.set('HAVE_INET_ATON', compiler.has_function('inet_aton', args: defs))
-conf_data.set('HAVE_INET_NTOP', compiler.has_function('inet_ntop', args: defs))
+conf_data.set('HAVE_INET_PTON', compiler.has_function('inet_pton', args: defs))
 conf_data.set('HAVE_JRAND48', compiler.has_function('jrand48', args: defs))
 conf_data.set('HAVE_KQUEUE', compiler.has_function('kqueue', args: defs))
 conf_data.set('HAVE_LOCALTIME_R', compiler.has_function('localtime_r', args: defs))
@@ -134,11 +129,9 @@ conf_data.set('HAVE_MEMPCPY', compiler.has_function('mempcpy', args: defs))
 conf_data.set('HAVE_MEMSET', compiler.has_function('memset', args: defs))
 conf_data.set('HAVE_MKOSTEMP', compiler.has_function('mkostemp', args: defs))
 conf_data.set('HAVE_MMAP', compiler.has_function('mmap', args: defs))
-conf_data.set('HAVE_PATHCONF', compiler.has_function('pathconf', args: defs))
 conf_data.set('HAVE_PIPE2', compiler.has_function('pipe2', args: defs))
 conf_data.set('HAVE_POLL', compiler.has_function('poll', args: defs))
 conf_data.set('HAVE_PORT_CREATE', compiler.has_function('port_create', args: defs))
-conf_data.set('HAVE_POSIX_FADVISE', compiler.has_function('posix_fadvise', args: defs))
 conf_data.set('HAVE_PREAD', compiler.has_function('pread', args: defs))
 conf_data.set('HAVE_PREADV', compiler.has_function('preadv', args: defs))
 conf_data.set('HAVE_PWRITE', compiler.has_function('pwrite', args: defs))
@@ -150,17 +143,12 @@ conf_data.set('HAVE_SENDFILE64', compiler.has_function('sendfile64', args: defs)
 conf_data.set('HAVE_SENDFILEV', compiler.has_function('sendfilev', args: defs))
 conf_data.set('HAVE_SIGACTION', compiler.has_function('sigaction', args: defs))
 conf_data.set('HAVE_SIGNAL', compiler.has_function('signal', args: defs))
-conf_data.set('HAVE_SIGTIMEDWAIT', compiler.has_function('sigtimedwait', args: defs))
 conf_data.set('HAVE_SPLICE', compiler.has_function('splice', args: defs))
 conf_data.set('HAVE_SRANDOM', compiler.has_function('srandom', args: defs))
 conf_data.set('HAVE_STRERROR_R', compiler.has_function('strerror_r', args: defs))
-conf_data.set('HAVE_STRPTIME', compiler.has_function('strptime', args: defs))
-conf_data.set('HAVE_SYSLOG', compiler.has_function('syslog', args: defs))
 conf_data.set('HAVE_TIMEGM', compiler.has_function('timegm', args: defs))
 conf_data.set('HAVE_WRITEV', compiler.has_function('writev', args: defs))
-conf_data.set('HAVE_INET_ATON', compiler.has_function('inet_aton', args: defs))
 conf_data.set('HAVE_ISSETUGID', compiler.has_function('issetugid', args: defs))
-conf_data.set('HAVE_INET_PTON', compiler.has_function('inet_pton', args: defs))
 conf_data.set('HAVE_MEMSET_S', compiler.has_function('memset_s', args: defs))
 conf_data.set('HAVE_EXPLICIT_BZERO', compiler.has_function('explicit_bzero', args: defs))
 conf_data.set('HAVE_EXPLICIT_MEMSET', compiler.has_function('explicit_memset', args: defs))
@@ -625,6 +613,7 @@ if get_option('with_webdav_props')
 		# has_function doesn't like "internal dependencies"
 		libxml2 += libxml2_includes_dep
 	endif
+	conf_data.set('HAVE_LIBXML2', true)
 	conf_data.set('HAVE_LIBXML_H', true)
 
 	libsqlite3 = dependency('sqlite31', required: false)
