--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -93,7 +93,9 @@ set(CMAKE_REQUIRED_FLAGS)
 check_include_files(sys/filio.h HAVE_SYS_FILIO_H)
 check_include_files(sys/inotify.h HAVE_SYS_INOTIFY_H)
 check_include_files(sys/mman.h HAVE_SYS_MMAN_H)
+set(CMAKE_REQUIRED_FLAGS "-include sys/time.h")
 check_include_files(sys/loadavg.h HAVE_SYS_LOADAVG_H)
+set(CMAKE_REQUIRED_FLAGS)
 check_include_files(sys/poll.h HAVE_SYS_POLL_H)
 check_include_files(sys/prctl.h HAVE_SYS_PRCTL_H)
 check_include_files(sys/procctl.h HAVE_SYS_PROCCTL_H)
@@ -1061,7 +1063,6 @@ set_target_properties(lighttpd PROPERTIES CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_P
 if(WIN32)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNVALGRIND")
 	add_target_properties(lighttpd COMPILE_FLAGS "-DLI_DECLARE_EXPORTS")
-	target_link_libraries(lighttpd ws2_32)
 	target_link_libraries(mod_proxy ws2_32)
 	target_link_libraries(mod_fcgi ws2_32)
 	target_link_libraries(mod_scgi ws2_32)
@@ -1137,6 +1138,19 @@ if(WITH_LIBUNWIND)
 	add_target_properties(test_configfile COMPILE_FLAGS ${PCRE_CFLAGS} ${LIBUNWIND_CFLAGS})
 	target_link_libraries(test_mod ${LIBUNWIND_LDFLAGS})
 	add_target_properties(test_mod COMPILE_FLAGS ${LIBUNWIND_CFLAGS})
+endif()
+
+if(WIN32)
+	set(SOCKLIBS ws2_32)
+endif()
+if(CMAKE_SYSTEM_NAME MATCHES "SunOS")
+	set(SOCKLIBS socket nsl)
+endif()
+if(SOCKLIBS)
+	target_link_libraries(lighttpd ${SOCKLIBS})
+	target_link_libraries(test_common ${SOCKLIBS})
+	target_link_libraries(test_configfile ${SOCKLIBS})
+	target_link_libraries(test_mod ${SOCKLIBS})
 endif()
 
 if(NOT WIN32)
