[build] cmake: skip "-Wl,-export-dynamic" Illumos
(thx devnexen)

cmake: do not pass "-Wl,-export-dynamic" to Sun ld on Illumos

x-ref:
  "Solaris build fix proposal"
  https://redmine.lighttpd.net/issues/3130

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1052,10 +1052,9 @@ if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
 	set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_WITHDEBINFO} -O2")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${WARN_LDFLAGS}")
 	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${WARN_LDFLAGS}")
-endif()
-
-if((NOT APPLE) OR CMAKE_C_COMPILER_ID MATCHES "GNU")
-	add_target_properties(lighttpd LINK_FLAGS "-Wl,-export-dynamic")
+	if((NOT APPLE) AND (NOT CMAKE_SYSTEM_NAME MATCHES "SunOS"))
+		add_target_properties(lighttpd LINK_FLAGS "-Wl,-export-dynamic")
+	endif()
 endif()
 
 set_target_properties(lighttpd PROPERTIES CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
