[core] server.core-files support for solaris (fixes #3135)
server.core-files support for solaris based systems.

- using setpflags and disable process tracing protection for the current process.

(edited: gstrauss)

x-ref:
  "server.core-files support on Solaris based system"
  https://redmine.lighttpd.net/issues/3135

--- a/configure.ac
+++ b/configure.ac
@@ -1472,6 +1472,10 @@ AC_CHECK_FUNCS([\
 ])
 AC_CHECK_HEADERS([sys/random.h], [AC_CHECK_FUNCS([getentropy])])
 AC_CHECK_HEADERS([linux/random.h], [AC_CHECK_FUNCS([getrandom])])
+case "$host_os" in
+*sunos*|*solaris* ) AC_CHECK_HEADERS([priv.h], [AC_CHECK_FUNCS([setpflags])]) ;;
+* ) ;;
+esac
 
 AC_MSG_NOTICE([----------------------------------------])
 AC_MSG_CHECKING([if weak symbols are supported])
