[build] Haiku build fix (fixes #3136)
Haiku needs to link to additional lib -lnetwork for socket funcs
(similar to Solaris need for -lsocket -lnsl)

(edited: gstrauss)

x-ref:
  "haiku build fix proposal"
  https://redmine.lighttpd.net/issues/3136

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -213,6 +213,8 @@ endif()
 check_library_exists(elftc elftc_copyfile "libelftc.h" HAVE_ELFTC_COPYFILE)
 if(CMAKE_SYSTEM_NAME MATCHES "SunOS")
 set(CMAKE_REQUIRED_LIBRARIES "socket;nsl")
+elseif(CMAKE_SYSTEM_NAME MATCHES "Haiku")
+set(CMAKE_REQUIRED_LIBRARIES "network")
 endif()
 check_c_source_compiles("
 	#include <sys/types.h>
@@ -1154,6 +1156,8 @@ if(WIN32)
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES "SunOS")
 	set(SOCKLIBS socket nsl)
+elseif(CMAKE_SYSTEM_NAME MATCHES "Haiku")
+	set(SOCKLIBS network)
 endif()
 if(SOCKLIBS)
 	target_link_libraries(lighttpd ${SOCKLIBS})
