--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,8 @@ if(WIN32)
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES "SunOS")
   set(SOCKLIBS socket nsl)
+elseif(CMAKE_SYSTEM_NAME MATCHES "Haiku")
+  set(SOCKLIBS network)
 endif()
 if(SOCKLIBS)
   target_link_libraries(fcgi-responder ${SOCKLIBS})
