--- a/configure.ac
+++ b/configure.ac
@@ -1623,6 +1623,7 @@ AC_ARG_ENABLE([extra-warnings],
 
 if test "$extrawarnings" = true || test "$extrawarnings" = error; then
   TRY_CFLAGS([-g -O2 -g2 -Wall -Wmissing-declarations -Wcast-align -Wsign-compare -Wnested-externs -Wpointer-arith -D_FORTIFY_SOURCE=2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security])
+  TRY_CFLAGS([-fstack-protector-strong])
   case "$host_os" in
     *darwin* ) ;;
     * ) TRY_LDFLAGS([-Wl,--as-needed]) ;;
