[core] allow tests/tmp/bind.conf override (#3137)
optional bind spec override for tests/*.conf,
e.g. for use on platforms w/o socket activation

x-ref:
  "TRACEME environment option in tests broken with LISTEN_PID"
  https://redmine.lighttpd.net/issues/3137

--- a/tests/scgi-responder.conf
+++ b/tests/scgi-responder.conf
@@ -3,6 +3,9 @@
 #debug.log-request-handling = "enable"
 
 server.systemd-socket-activation = "enable"
+# optional bind spec override, e.g. for platforms without socket activation
+include env.SRCDIR + "/tmp/bind*.conf"
+
 server.document-root       = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
