--- a/tests/proxy.conf
+++ b/tests/proxy.conf
@@ -1,4 +1,7 @@
 server.systemd-socket-activation = "enable"
+# optional bind spec override, e.g. for platforms without socket activation
+include env.SRCDIR + "/tmp/bind*.conf"
+
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
