[build] meson -Dlua_version=... to specify lua ver
(thx herbmillerjr)

x-ref:
  https://github.com/gentoo/gentoo/pull/23857

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -166,3 +166,8 @@ option('moduledir',
 	value: 'lib/lighttpd',
 	description: 'Location to install modules to (relative to prefix)',
 )
+
+option('lua_version',
+	type: 'string',
+	description: 'Look for a specific lua version',
+)
