--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,6 +40,7 @@ option(WITH_PAM "with PAM-support for mod_auth [default: off]")
 option(WITH_LUA "with lua 5.1 for mod_magnet [default: off]")
 # option(WITH_VALGRIND "with internal support for valgrind [default: off]")
 option(WITH_FAM "fam/gamin for reducing number of stat() calls [default: off]")
+option(WITH_LIBDEFLATE "with libdeflate-support for mod_deflate [default: off]")
 option(WITH_LIBEV "libev support for fdevent handlers [default: off]")
 option(WITH_LIBUNWIND "with libunwind to print backtraces in asserts [default: off]")
 option(WITH_MAXMINDDB "with MaxMind GeoIP2-support mod_maxminddb [default: off]")
@@ -774,6 +775,14 @@ else()
 	unset(HAVE_LIBLBER)
 endif()
 
+if(WITH_LIBDEFLATE)
+	check_include_files(libdeflate.h HAVE_LIBDEFLATE_H)
+	check_library_exists(deflate libdeflate_alloc_compressor "" HAVE_LIBDEFLATE)
+else()
+	unset(HAVE_LIBDEFLATE_H)
+	unset(HAVE_LIBDEFLATE)
+endif()
+
 if(WITH_PAM)
 	check_include_files(security/pam_appl.h HAVE_SECURITY_PAM_APPL_H)
 	check_library_exists(pam pam_start "" HAVE_PAM)
@@ -1085,7 +1094,7 @@ if(WITH_SASL)
 	target_link_libraries(mod_authn_sasl ${L_MOD_AUTHN_SASL})
 endif()
 
-if(HAVE_ZLIB_H OR HAVE_ZSTD_H OR HAVE_BZLIB_H OR HAVE_BROTLI)
+if(HAVE_ZLIB_H OR HAVE_ZSTD_H OR HAVE_BZLIB_H OR HAVE_BROTLI OR HAVE_LIBDEFLATE)
 	if(HAVE_ZLIB_H)
 		set(L_MOD_DEFLATE ${L_MOD_DEFLATE} ${ZLIB_LIBRARY})
 	endif()
@@ -1097,6 +1106,9 @@ if(HAVE_ZLIB_H OR HAVE_ZSTD_H OR HAVE_BZLIB_H OR HAVE_BROTLI)
 	endif()
 	if(HAVE_BROTLI)
 		set(L_MOD_DEFLATE ${L_MOD_DEFLATE} brotlienc)
+	endif()
+	if(HAVE_LIBDEFLATE)
+		set(L_MOD_DEFLATE ${L_MOD_DEFLATE} deflate)
 	endif()
 	target_link_libraries(mod_deflate ${L_MOD_DEFLATE})
 endif()
