[core] sys-setjmp.[ch]
wrap system setjmp or compiler C try/catch mechanism

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -62,6 +62,7 @@ common_src=base64.c buffer.c burl.c log.c \
 	sock_addr.c \
 	fdlog_maint.c \
 	fdlog.c \
+	sys-setjmp.c \
 	ck.c
 
 src = server.c response.c connections.c h2.c reqpool.c \
@@ -417,7 +418,8 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	configparser.h \
 	rand.h \
 	sys-crypto.h sys-crypto-md.h \
-	sys-endian.h sys-mmap.h sys-socket.h sys-strings.h sys-time.h \
+	sys-endian.h sys-mmap.h sys-setjmp.h \
+	sys-socket.h sys-strings.h sys-time.h \
 	sock_addr.h status_counter.h \
 	mod_auth_api.h \
 	mod_magnet_cache.h \
