--- a/src/SConscript
+++ b/src/SConscript
@@ -58,7 +58,7 @@ def GatherLibs(env, *libs):
 common_src = Split("base64.c buffer.c burl.c log.c \
 	http_header.c http_kv.c keyvalue.c chunk.c  \
 	http_chunk.c fdevent.c fdevent_fdnode.c gw_backend.c \
-	stat_cache.c plugin.c http_etag.c array.c \
+	stat_cache.c http_etag.c array.c \
 	algo_md5.c algo_sha1.c algo_splaytree.c \
 	configfile-glue.c \
 	http-header-glue.c \
@@ -74,6 +74,7 @@ common_src = Split("base64.c buffer.c burl.c log.c \
 ")
 
 src = Split("server.c response.c connections.c h2.c reqpool.c \
+	plugin.c \
 	sock_addr_cache.c \
 	ls-hpack/lshpack.c \
 	algo_xxhash.c \
