[core] permit env w/ blank value (fix regression)
(thx Lars Bingchong)

empty env var must be set to blank string and not left unset
(regression in lighttpd 1.4.56 - lighttpd 1.4.64)

x-ref:
  https://stackoverflow.com/a/52913064/1338888

--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -63,6 +63,7 @@ setenv.add-environment = (
 )
 setenv.set-environment = (
 	"NEWENV" => "newenv",
+	"BLANK_VALUE" => "",
 )
 setenv.add-request-header = (
 	"FOO" => "foo",
